[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/effects/black_hole/Black-hole.png" type="Texture" id=1]
[ext_resource path="res://scenes/Portal.gd" type="Script" id=2]
[ext_resource path="res://assets/effects/smoke_explosion/smoke_explosion.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/portal_circle.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 504, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "transfort",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 17.0

[node name="Portal" type="Area2D"]
z_index = 1
collision_layer = 9
collision_mask = 3
script = ExtResource( 2 )
portal_color = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "run"
frame = 6

[node name="TransfortAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.8, 0.792157, 0.733333, 1 )
position = Vector2( 0.0834274, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 17 )
animation = "transfort"
frame = 6
playing = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 0.541927, 0.144624 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 18 )

[node name="Tween" type="Tween" parent="."]

[node name="RunningTimer" type="Timer" parent="."]
one_shot = true

[node name="TransfortingTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Portal_body_exited"]
[connection signal="animation_finished" from="TransfortAnimatedSprite" to="." method="_on_TransfortAnimatedSprite_animation_finished"]
[connection signal="timeout" from="RunningTimer" to="." method="_on_RunningTimer_timeout"]
[connection signal="timeout" from="TransfortingTimer" to="." method="_on_TransfortingTimer_timeout"]
